# Correlation-Efficient-Time-Evolution-CETE

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
analytical_parameters/: generate_parameters.py  parameters.npy
notebooks/: H2.ipynb
notebooks/results/H2_0.03_30_20/: depths_summary.npy  elecs_summary.npy  energies_summary.npy  fids_summary.npy  summary.txt  times_summary.npy  trad_depths_summary.npy  trad_elecs_summary.npy  trad_energies_summary.npy
src/CETE/: CETE.py  CETE_helper_H2.py  __init__.py
src/CETE.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/sparse_sim/: .gitignore  README.md
src/sparse_sim/fermion/: __init__.py
