[project]
name = "CETE"
version = "0.1.0"

dependencies = [
    "qiskit>=1.3,<2",
    "qiskit-aer>=0.17.1",
    "numpy>=2.3.0",
    "matplotlib>=3.10.3",
    "qiskit_nature>=0.7.2",
    "qiskit_ibm_runtime>=0.40.1",
    "pyscf>=2.9.0",
    "cython>=3.1.2",
    "mthree>=3.0.0"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src", "src/SparseSim", "src/CETE"]
include = ["CETE", "RTE", "sparse_sim"]